--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
+
 {
-  "name": "sport-archive",
+  "name": "sport-archive-ui",
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "vercel-build": "next build"
+    "start": "next start"
   },
   "dependencies": {
     "next": "14.1.0",
